k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:

  rules:
  - host: microservices.info
    http:
      paths:
      - path: /employee
        pathType: Prefix
        backend:
          service:
            name: employee
            port: 
              number: 8080
      - path: /department
        pathType: Prefix
        backend:
          service:
            name: department
            port: 
              number: 8080
      - path: /organization
        pathType: Prefix
        backend:
          service:
            name: organization
            port: 
              number: 8080
